# turboquant-mlx-full

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md
examples/: qwen_chat.py
scripts/: benchmark.py  quantize_qwen.sh
tests/: test_hadamard.py  test_packing.py  test_quantize.py
turboquant_mlx_full/: __init__.py  hadamard.py  kv_cache.py  packing.py  patch.py  quant_levels.py  quantize_weights.py  turboquant_linear.py  utils.py
turboquant_mlx_full/metal_kernels/: README.md
