[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboquant-mlx-full"
version = "1.0.0"
description = "First complete MLX TurboQuant: weights + KV cache for Apple Silicon"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["mlx", "llm", "quantization", "apple-silicon", "turboquant", "qwen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: MacOS X",
]
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.17.0",
    "numpy>=1.26.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "pytest-xdist", "scipy", "ruff"]
full = ["scipy", "torch>=2.1.0"]

[project.urls]
Homepage   = "https://github.com/matt-k-wong/turboquant-mlx-full"
Repository = "https://github.com/matt-k-wong/turboquant-mlx-full"
Issues     = "https://github.com/matt-k-wong/turboquant-mlx-full/issues"

[tool.hatch.build.targets.wheel]
packages = ["turboquant_mlx_full"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
